<resources>
    <string name="app_name">CapstoneProjectNew</string>
    <string name="settings">Settings</string>
    <string name="fahmi_idris">Fahmi Idris</string>
    <string name="fahmiidris_apps_ipb_ac_id">fahmiidris@apps.ipb.ac.id</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="select">select</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="voice_button">Voice Button</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="title_setting">Setting</string>
    <string name="favorite">favorite</string>
    <string name="play">play</string>
    <string name="indonesia">Indonesia</string>
    <string name="select_language">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="login_image">Login Image</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="title_library">Audio Library</string>
    <string name="logout">Logout</string>
    <string name="previous_button">Previous Button</string>
    <string name="play_pause_button">Play and Pause Button</string>
    <string name="next_button">Next Button</string>
    <string name="back_button">Back Button</string>
    <string name="audio_playing">Audio Playing</string>
    <string name="audio_title">Audio Title</string>
    <string name="audio_paused">Audio Paused</string>
    <string name="audio_player">Audio Player</string>
    <string name="no_data">No Data</string>
</resources>