<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_manager"
    app:startDestination="@id/home_menu">

    <fragment
        android:id="@+id/home_menu"
        android:name="com.c23ps266.capstoneprojectnew.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/library_menu"
        android:name="com.c23ps266.capstoneprojectnew.ui.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/setting_menu"
        android:name="com.c23ps266.capstoneprojectnew.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>